<resources>
    <string name="app_name">DataNet</string>

    <string name="title_activity_node_list">NodeListActivity</string>
    <string name="title_activity_new_node">New Node</string>

    <string name="insert_net">Insert the name of the net:</string>
    <string name="hint_insert_net">Name of the net</string>
    <string name="empty_name_net">You can\'t continue, you must insert the name of the net.</string>

    <string name="next_button">Next</string>
    <string name="done_button">Done</string>

    <string name="menu_new_node">New Node</string>
    <string name="menu_done">Done</string>
    <string name="menu_done_new_node">Done</string>
    <string name="menu_cancel_new_node">Cancel</string>

    <string name="node_name_label">Name</string>
    <string name="node_name_hint">Enter a name for the node.</string>

    <string name="parents_name_label">Parents</string>

    <string name="values_title">Values</string>
    <string name="values_hint">Enter a name for the value.</string>

    <string name="net_empty">The Net is empty, you can\'t write the files.</string>
    <string name="file_create">The files were created successfully.</string>

    <string name="delete_alert">Delete</string>
    <string name="delete_value_message">Do you want delete this value?</string>

    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>

    <string name="name_values_node">You can\'t continue. Check if you have inserted the name and the values for the node.</string>

    <string name="upload_net">Select the net you want create:</string>

    <string name="server_ok">Upload completed.</string>
    <string name="server_fail">Check the server. There are some problem with it.</string>

    <string name="server_net">The net is created successfully.</string>
</resources>
