<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_name_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/node_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/node_name_hint"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_evidence_title"
        style="?android:listSeparatorTextViewStyle"/>

    <CheckBox
        android:id="@+id/node_evidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:checked="true"
        android:text="@string/node_evidence_label"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parents_name_label"
        style="?android:listSeparatorTextViewStyle"/>

    <com.android.diego.datanet.Libraries.MultiSelectionSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.android.diego.datanet.Libraries.MultiSelectionSpinner>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/values_title"
        style="?android:listSeparatorTextViewStyle"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Add"/>
        <EditText
            android:id="@+id/textin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/add"
            android:hint="@string/values_hint"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>


</LinearLayout>
