<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
            android:text="@string/insert_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <EditText
            android:id="@+id/edit_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_insert_net"
            android:padding="24dp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/next_insert_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_gravity="bottom|right"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="4dp"/>

</FrameLayout>